--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
 }
 #carouselExampleCaptions{
     width:40%;
+    height: 30%;
     position: absolute;
     margin-top: 10px;
     margin-bottom: 20px;
